--- a/back/package.json
+++ b/back/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "typescript-boilerplate",
+  "name": "balance-ton-carbone-back",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -26,13 +26,19 @@
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^9.0.2",
-    "@typescript-eslint/eslint-plugin": "^5.36.1",
-    "eslint": "^8.23.0",
+    "@types/prettier": "^2.7.3",
+    "@typescript-eslint/eslint-plugin": "^5.60.1",
+    "@typescript-eslint/parser": "^5.60.1",
+    "eslint": "^8.43.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard-with-typescript": "^22.0.0",
-    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-n": "^15.2.5",
     "eslint-plugin-promise": "^6.0.1",
+    "prettier": "^2.8.8",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.2"
   }
