--- a/back/package.json
+++ b/back/package.json
@@ -16,6 +16,7 @@
     "argon2": "^0.30.3",
     "class-validator": "^0.14.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "graphql": "^15.8.0",
     "jsonwebtoken": "^9.0.0",
