--- a/back/package.json
+++ b/back/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@faker-js/faker": "^8.0.2",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "apollo-server": "^3.12.0",
@@ -23,7 +24,8 @@
     "pg": "^8.10.0",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^1.1.1",
-    "typeorm": "^0.3.12"
+    "typeorm": "^0.3.17",
+    "typeorm-extension": "^3.0.1"
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^9.0.2",
