Seeder class and seeding script

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,13 @@
 .vscode/
 back/.env
 
+#tour
+back/.tours
+
+#package.lock.json
+back/package-lock.json
+front/package-lock.json
+
 #node_modules
 back/node_modules/
 front/node_modules/
