--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,6 @@ services:
       - ./back/src:/app/src
     env_file:
       - ./.env
-    command: npx ts-node /app/src/seeding/seed.ts && npx ts-node /app/src/index.ts
     depends_on:
       - db
 
@@ -21,6 +20,8 @@ services:
   db:
     image: postgres
     restart: always
+    volumes:
+      - postgresData:/var/lib/postgresql/data
     env_file:
       - ./.env
 
@@ -29,3 +30,9 @@ services:
     restart: always
     ports:
       - 8080:8080
+
+volumes:
+  postgresData:
+
+networks:
+  networksData:
