--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
       - ./.env
     depends_on:
       - db
+    ports:
+      - 4000:4000
     networks:
       - networksData
 
@@ -12,6 +14,8 @@ services:
     build: ./front
     volumes:
       - ./front/src:/app/src
+    ports:
+      - 3000:3000
     networks:
       - networksData
 
