feat: added live reload on frontend service

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,8 @@ services:
 
   frontend:
     build: ./front
+    environment:
+      - WATCHPACK_POLLING=true
     volumes:
       - ./front/src:/app/src
     ports:
