--- a/front/.eslintrc.json
+++ b/front/.eslintrc.json
@@ -21,6 +21,8 @@
     "rules": {
         "react/react-in-jsx-scope": "off",
         "react/jsx-uses-react": "off",
-        "react/prop-types": "off"
+        "react/prop-types": "off",
+        "no-empty-function": "off",
+        "@typescript-eslint/no-empty-function": "off"
     }
 }
