--- a/front/package.json
+++ b/front/package.json
@@ -24,7 +24,8 @@
     "react-websitecarbon-badge": "^1.0.5",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
-    "yup": "^1.2.0"
+    "yup": "^1.2.0",
+    "zod": "^3.22.2"
   },
   "scripts": {
     "start": "react-scripts start",
