add dashboard + create expense card compenent and create expenses item list component to display in the expense card. responsive ok with breakpoints

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ back/.tours
 #package.lock.json
 back/package-lock.json
 front/package-lock.json
+package-lock.json
 
 #node_modules
 back/node_modules/
