--- a/front/package.json
+++ b/front/package.json
@@ -2,6 +2,7 @@
   "name": "balance-ton-carbone-front",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "dependencies": {
     "@apollo/client": "^3.7.11",
     "@emotion/react": "^11.11.1",
@@ -11,13 +12,17 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/chart.js": "^2.9.38",
     "@types/node": "^16.18.16",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "chart.js": "^4.0.0",
+    "date-fns": "^2.30.0",
     "formik": "^2.4.2",
     "graphql": "^16.6.0",
     "prettier": "^3.0.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
