--- a/.github/workflows/jest-ci.yaml
+++ b/.github/workflows/jest-ci.yaml
@@ -13,11 +13,11 @@ jobs:
       - name: Goto front
         run: cd front && npm i
       - name: Check TS
-        run: npx tsc --noEmit
+        run: cd front && npx tsc --noEmit
       - name: Check build
-        run: npm run build
+        run: cd front && npm run build
       - name: run tests
-        run: npm test
+        run: cd front && npm test
 
   test-back:
     runs-on: unbuntu-latest
