--- a/back/package.json
+++ b/back/package.json
@@ -30,12 +30,14 @@
     "typeorm-extension": "^3.0.1"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.7",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/prettier": "^2.7.3",
     "@typescript-eslint/eslint-plugin": "^6.2.1",
     "@typescript-eslint/parser": "^6.2.1",
     "eslint": "^8.46.0",
     "eslint-config-prettier": "^8.9.0",
+    "jest": "^29.7.0",
     "prettier": "2.8.8",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.2"
