--- a/back/package.json
+++ b/back/package.json
@@ -4,12 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "ts-node-dev --poll src/index.ts",
     "seedDB": "ts-node-dev src/seeding/seed.ts"
   },
   "author": "",
   "license": "ISC",
+  "type": "module",
   "dependencies": {
     "@faker-js/faker": "^8.0.2",
     "@types/cors": "^2.8.13",
@@ -39,6 +40,7 @@
     "eslint-config-prettier": "^8.9.0",
     "jest": "^29.7.0",
     "prettier": "2.8.8",
+    "ts-jest": "^29.1.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.2"
   }
