--- a/front/.eslintrc.json
+++ b/front/.eslintrc.json
@@ -24,5 +24,10 @@
         "react/prop-types": "off",
         "no-empty-function": "off",
         "@typescript-eslint/no-empty-function": "off"
+    },
+    "settings": {
+        "react": {
+            "version": "detect"
+        }
     }
 }
