--- a/.github/workflows/prod.yaml
+++ b/.github/workflows/prod.yaml
@@ -21,14 +21,14 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
       - name: Build and push
         uses: docker/build-push-action@v4
         with:
           push: true
           context: '{{defaultContext}}:front'
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/Wild-Carbon-prod-frontend:latest
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/Wild-Carbon-prod-frontend:latest
 
   docker-prod-backend:
     if: github.ref == 'refs/heads/main'
@@ -41,11 +41,11 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
       - name: Build and push
         uses: docker/build-push-action@v4
         with:
           push: true
           context: '{{defaultContext}}:back'
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/Wild-Carbon-prod-backend:latest
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/Wild-Carbon-prod-backend:latest
