--- a/front/package.json
+++ b/front/package.json
@@ -25,6 +25,7 @@
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-material-ui-carousel": "^3.4.2",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
     "react-websitecarbon-badge": "^1.0.5",
