--- a/back/package.json
+++ b/back/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "jest",
     "start": "ts-node-dev --poll src/index.ts",
-    "seedDB": "ts-node-dev src/seeding/seed.ts"
+    "seedDB": "if [$NODE_ENV -ne 'PRODUCTION'] then ts-node-dev src/seeding/seed.ts else echo '$NODE_ENV environment, seedDB is skipped' fi"
   },
   "author": "",
   "license": "ISC",
