--- a/front/package.json
+++ b/front/package.json
@@ -8,6 +8,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.16",
+    "@mui/lab": "^5.0.0-alpha.162",
     "@mui/material": "^5.13.6",
     "@mui/x-date-pickers": "^6.14.0",
     "@testing-library/jest-dom": "^5.16.5",
